# kimmdy

./: .gitignore  .gitmodules  Automized_run.py  CHANGELOG.html  CHANGELOG.md  CITATION.cff  Makefile  README.md  _quarto.yml  _renderer.py  _sidebar.yml  change_atomname.py  environment.yml  functions.py  index.html  index.qmd  launch.json  listings.json  main.py  objects.json  objects.txt  pyproject.toml  pytest.ini  requirements.txt  search.json  setup.cfg  sitemap.xml  theme.scss  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: black.yml  build-docs.yml  build-examples.yml  ci.yml  draft.yml  lint.yml  lint.yml~  publish-to-pypi.yml  publish.yml  release-please.yml  release.yml  test-local.yml  test-pr.yml  test-release.yml  tests.yml
_inv/: numpy_objects.json  numpy_objects.txt  python_objects.json  python_objects.txt
_reference/: analysis.html  analysis.qmd  changemanager.qmd  cmd.html  cmd.qmd  config.html  config.qmd  constants.html  constants.qmd  coordinates.html  coordinates.qmd  dummyreaction.reaction.DummyReaction.html  dummyreaction.reaction.DummyReaction.qmd  hat_naive.reaction.NaiveHAT.html  hat_naive.reaction.NaiveHAT.qmd  homolysis.reaction.Homolysis.html  homolysis.reaction.Homolysis.qmd  index.html  index.qmd  kmc.html  kmc.qmd  misc_helper.qmd  parsing.TopologyDict.html  parsing.TopologyDict.qmd  parsing.html  parsing.qmd  plugins.html  plugins.qmd  reaction.qmd  reactions.homolysis.qmd  recipe.html  recipe.qmd  runmanager.html  runmanager.qmd  schema.html  schema.qmd  tasks.html  tasks.qmd  tools.html  tools.qmd  (+10 more)
dev/: README.md
dev/design/: architecture_draft.dot
docs/: PlantUML.txt  index.html  listings.json  objects.json  objects.txt  robots.txt  search.json  sitemap.xml  uml.md
docs-assets/: render.sh  uml.html
docs/_reference/: analysis.html  changemanager.html  cmd.html  config.html  constants.html  coordinates.html  dummyreaction.reaction.DummyReaction.html  hat_naive.reaction.NaiveHAT.html  homolysis.reaction.Homolysis.html  index.html  kmc.html  misc_helper.html  parsing.TopologyDict.html  parsing.html  plugins.html  reaction.html  reactions.homolysis.html  recipe.html  runmanager.html  schema.html  tasks.html  tools.html  topology.atomic.html  topology.ff.html  topology.topology.html  topology.utils.html  utils.html
docs/doctrees/: environment.pickle  index.doctree  kimmdy.doctree  modules.doctree  setup.doctree  topology.doctree  welcome.doctree
docs/guide/: colbuilder.html  getting-started.html  index.html  options.html  plugins.html  topology.html  uml.html  vis-ala.molj
docs/html/: .buildinfo  genindex.html  index.html  kimmdy.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  topology.html  welcome.html
docs/reference/: changemanager.html  cmd.html  cmd.kimmdy_run.html  config.html  constants.html  coordinates.Example.html  coordinates.html  get_object.html  index.html  kimmdy.runmanager.AMBIGUOUS_SUFFS.html  kimmdy.runmanager.RunManager.config.html  kimmdy.runmanager.RunManager.cptfile.html  kimmdy.runmanager.RunManager.crr_tasks.html  kimmdy.runmanager.RunManager.filehist.html  kimmdy.runmanager.RunManager.from_checkpoint.html  kimmdy.runmanager.RunManager.get_latest.html  (+74 more)
docsource/: conf.py  kimmdy.rst  modules.rst  topology.md  topology.qmd
example/: av_forces_per_bondtype.csv  av_forces_per_bondtype_cross.csv  kimmdy.yml
example files/: topol_modified.top
guide/: colbuilder.qmd  getting-started.qmd  index.qmd  options.html  options.qmd  plugins.qmd  topology.qmd  uml.qmd  vis-ala.molj
plugins/: LICENSE  README.md  requirements.txt  setup.cfg
plugins/default_reactions/: setup.cfg  test_default_reactions.py
plugins/default_reactions/example/: example.py
plugins/default_reactions/src/dummyreaction/: kimmdy-yaml-schema.json  reaction.py
plugins/default_reactions/src/hat_naive/: kimmdy-yaml-schema.json  reaction.py
plugins/default_reactions/src/homolysis/: kimmdy-yaml-schema.json  reaction.py
plugins/default_reactions/test_default_reactions/: kimmdy.yml
plugins/grappa_interface/: README.md  setup.cfg  test_parameterizers.py
plugins/grappa_interface/src/: grappa_interface.py
plugins/grappa_interface/tests/: test_parameterizers.py
reference/: changemanager.qmd  cmd.kimmdy_run.qmd  cmd.qmd  config.qmd  constants.qmd  coordinates.Example.qmd  coordinates.qmd  get_object.qmd  index.qmd  kimmdy.runmanager.AMBIGUOUS_SUFFS.qmd  kimmdy.runmanager.RunManager.config.qmd  kimmdy.runmanager.RunManager.cptfile.qmd  kimmdy.runmanager.RunManager.crr_tasks.qmd  kimmdy.runmanager.RunManager.filehist.qmd  kimmdy.runmanager.RunManager.from_checkpoint.qmd  kimmdy.runmanager.RunManager.get_latest.qmd  kimmdy.runmanager.RunManager.histfile.qmd  kimmdy.runmanager.RunManager.iteration.qmd  kimmdy.runmanager.RunManager.iterations.qmd  kimmdy.runmanager.RunManager.latest_files.qmd  kimmdy.runmanager.RunManager.qmd  kimmdy.runmanager.RunManager.reaction_results.qmd  kimmdy.runmanager.RunManager.reactions.qmd  kimmdy.runmanager.RunManager.run.qmd  kimmdy.runmanager.RunManager.state.qmd  kimmdy.runmanager.RunManager.task_mapping.qmd  kimmdy.runmanager.RunManager.tasks.qmd  kimmdy.runmanager.RunManager.top.qmd  kimmdy.runmanager.State.qmd  kimmdy.runmanager.default_decision_strategy.qmd  kimmdy.runmanager.get_existing_files.qmd  kimmdy.topology.atomic.Angle.qmd  kimmdy.topology.atomic.AngleId.qmd  kimmdy.topology.atomic.AngleType.qmd  kimmdy.topology.atomic.Atom.qmd  kimmdy.topology.atomic.AtomId.qmd  kimmdy.topology.atomic.AtomType.qmd  kimmdy.topology.atomic.Atomic.qmd  kimmdy.topology.atomic.AtomicType.qmd  kimmdy.topology.atomic.AtomicTypes.qmd  (+47 more)
tests/: WIP_KMC.py  conftest.py  pytest.ini  test_KMC.py  test_changemanager.py  test_cmd.py  test_config.py  test_coordinates.py  test_graphs.py  test_homolysis.py  test_integration.py  test_kmc.py  test_parameterizers.py  test_parsing.py  test_plugin.py  test_reaction_methods.py  test_recipe.py  test_runmanager.py  test_schema.py  test_topology.py
www/: ala-vis.molx  kimmdy-yaml-config.json  theme-dark.scss  theme.scss
(+810 files in other folders)
