[metadata]
name = kimmdy
version = 4.0.1
license = MIT
description = Kinetic Monte Carlo Molecular Dynamics
long_description = file: README.md
author = hits-mbm
author_email = mbm@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License (GPL)
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True

install_requires =
    dill
    pyyaml
    numpy
    importlib_metadata
    MDAnalysis

python_requires = >= 3.10

[options.packages.find]
where=src


[options.extras_require]
reaction_plugins = 
    # TODO: update url once the plugin is available on pypi and/or
    # public on github.
    # At this point we can also move it to the install_requires section
    # but before release we install with -r requirements.txt anyways,
    # which already has -e plugins/
    # kimmdy-reactions @ git+ssh://git@github.com/hits-mbm-dev/kimmdy.git#egg&subdirectory=plugins
    kimmdy-reactions @ git+ssh://git@github.com/hits-mbm-dev/kimmdy.git@feat/GrAPPa_integration#egg&subdirectory=plugins/default_reactions
parameterization_plugins = 
    kimmdy-grappa @ git+ssh://git@github.com/hits-mbm-dev/kimmdy.git@feat/GrAPPa_integration#egg&subdirectory=plugins/grappa_interface


[options.entry_points]
console_scripts =
    kimmdy = kimmdy.cmd:kimmdy
    kimmdy-analysis = kimmdy.cmd:analysis
    kimmdy-build_examples = kimmdy.cmd:build_examples
