[metadata]
name = kimmdy
version = 4.4.0
license = MIT
description = Kinetic Monte Carlo Molecular Dynamics
long_description = file: README.md
author = hits-mbm
author_email = mbm@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License (GPL)
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True

install_requires =
    dill
    pyyaml
    numpy
    importlib_metadata
    MDAnalysis

python_requires = >= 3.10

[options.packages.find]
where=src


[options.extras_require]
    # TODO: update url once the plugin is available on pypi and/or
    # public on github.
    # At this point we can also move it to the install_requires section
    # but before release we install with -r requirements.txt anyways,
    # which already has -e plugins/
reaction_plugins = 
    kimmdy-reactions @ git+ssh://git@github.com/hits-mbm-dev/kimmdy.git#egg&subdirectory=plugins/default_reactions
parameterization_plugins = 
    kimmdy-grappa @ git+ssh://git@github.com/hits-mbm-dev/kimmdy.git#egg&subdirectory=plugins/grappa_interface
analysis =
  pandas
  matplotlib
  seaborn


[options.entry_points]
console_scripts =
    kimmdy = kimmdy.cmd:entry_point_kimmdy
    kimmdy-analysis = kimmdy.analysis:entry_point_analysis
    kimmdy-build_examples = kimmdy.tools:entry_point_build_examples
    kimmdy-remove_hydrogen = kimmdy.tools:entry_point_remove_hydrogen
