[metadata]
name = kimmdy
version = 6.7.0
license = MIT
description = Kinetic Monte Carlo Molecular Dynamics
description_content_type = text/markdown
long_description = file: README.md
long_description_content_type = text/markdown
author = hits-mbm
author_email = mbm@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License (GPL)
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True

install_requires =
    dill
    pyyaml
    numpy
    importlib_metadata
    MDAnalysis

python_requires = >= 3.10

[options.package_data]
kimmdy =
    *.json
    py.typed


[options.packages.find]
where=src


[options.extras_require]
    # TODO: update url once the plugin is available on pypi and/or
    # public on github.
    # At this point we can also move it to the install_requires section
    # but before release we install with -r requirements.txt anyways,
    # which already has -e plugins/
    # commented to get kimmdy ont pypi without plugins
    # such that the plugins themselves can depend on kimmdy
reactions = 
    kimmdy-reactions
grappa = 
    kimmdy-grappa
plugins =
    kimmdy-reactions
    kimmdy-grappa
analysis =
    pandas
    matplotlib
    seaborn
dev =
    pytest
    tox
    black
    hypothesis
    jupyter
    quartodoc
    pycallgraph2
    kimmdy-reactions
    kimmdy-grappa
    pandas
    matplotlib
    seaborn


[options.entry_points]
console_scripts =
    kimmdy = kimmdy.cmd:entry_point_kimmdy
    kimmdy-analysis = kimmdy.analysis:entry_point_analysis
    kimmdy-build-examples = kimmdy.tools:entry_point_build_examples
    kimmdy-modify-top = kimmdy.tools:entry_point_modify_top
