[metadata]
name = kimmdy-reactions
version = 0.2
license = MIT
description = Reaction template for KIMMDY
long_description = file: README.md
author = Kai Riedmiller
author_email = kai.riedmiller@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    MDAnalysis

python_requires = >= 3.9

[options.package_data]
dummyreaction =
    *.json
hat_naive =
    *.json
homolysis =
    *.json

[options.packages.find]
where=src

[options.entry_points]
kimmdy.reaction_plugins =
    dummyreaction = dummyreaction.reaction:DummyReaction
    hat_naive = hat_naive.reaction:NaiveHAT
    homolysis = homolysis.reaction:Homolysis
