[metadata]
name = grappa_interface
version = 0.1
license = MIT
description = Parameterization interface between KIMMDY and GrAPPa
long_description = file: README.md
author = Eric Hartmann
author_email = eric.hartmann@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    kimmdy
    MDAnalysis

python_requires = >= 3.8

[options.packages.find]
where=src

[options.entry_points]
kimmdy.parameterization_plugins =
    grappa_interface = grappa_interface:GrappaInterface
