[metadata]
name = kimmdy-grappa
version = 0.1
license = MIT
description = Parameterization interface between KIMMDY and GrAPPa
long_description = file: README.md
author = Eric Hartmann
author_email = eric.hartmann@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    kimmdy
#    grappa @ git+ssh://git@github.com/hits-mbm-dev/grappa.git
    MDAnalysis

python_requires = >= 3.8

[options.packages.find]
where=src

[options.entry_points]
kimmdy.parameterization_plugins =
    grappa = grappa_interface:GrappaInterface
